--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 aiofiles==23.2.1
 aiogram==3.2.0
+aiogram-calendar==0.5.0
+aiogram-dialog==2.1.0
 aiohttp==3.9.1
 aiosignal==1.3.1
 annotated-types==0.6.0
@@ -16,7 +18,9 @@ google-auth-oauthlib==1.1.0
 googleapis-common-protos==1.62.0
 httplib2==0.22.0
 idna==3.6
+Jinja2==3.1.3
 magic-filter==1.0.12
+MarkupSafe==2.1.4
 multidict==6.0.4
 oauthlib==3.2.2
 protobuf==4.25.1
@@ -27,10 +31,13 @@ pydantic-settings==2.1.0
 pydantic_core==2.14.5
 pygsheets==2.0.6
 pyparsing==3.1.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-telegram-bot-calendar==1.0.5
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
+six==1.16.0
 typing_extensions==4.9.0
 uritemplate==4.1.1
 urllib3==2.1.0
